--- a/game.libretro.xmil/addon.xml.in
+++ b/game.libretro.xmil/addon.xml.in
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <addon id="game.libretro.xmil"
-		name="Sharp X1 (X Millenium)"
-		version="0.60.0.6"
+		name="Sharp X1 (X Millennium)"
+		version="0.60.0.7"
 		provider-name="yui">
 	<requires>
 		<import addon="game.libretro" version="1.0.0"/>
@@ -14,7 +14,7 @@
 		<supports_standalone>false</supports_standalone>
 	</extension>
 	<extension point="xbmc.addon.metadata">
-		<summary lang="en_GB">Sharp X1 (X Millenium) 0.60</summary>
+		<summary lang="en_GB">Sharp X1 (X Millennium) 0.60</summary>
 		<description lang="en_GB">Supported files: .dx1, .zip, .2d, .2hd, .tfd, .d88, .88d, .hdm, .xdf, .dup, .cmd</description>
 		<license>BSD</license>
 		<platform>@PLATFORM@</platform>
