--- a/game.libretro.xmil/addon.xml.in
+++ b/game.libretro.xmil/addon.xml.in
@@ -15,7 +15,9 @@
 	</extension>
 	<extension point="xbmc.addon.metadata">
 		<summary lang="en_GB">Sharp X1 (X Millennium) 0.60</summary>
-		<description lang="en_GB">Supported files: .dx1, .zip, .2d, .2hd, .tfd, .d88, .88d, .hdm, .xdf, .dup, .cmd</description>
+		<description lang="en_GB">X millennium was born in the late 1990s as X1R, a real-time mode fork of X1EMU.
+
+Supported files: .dx1, .zip, .2d, .2hd, .tfd, .d88, .88d, .hdm, .xdf, .dup, .cmd</description>
 		<license>BSD</license>
 		<platform>@PLATFORM@</platform>
 		<source>https://github.com/kodi-game/game.libretro.xmil</source>
