--- a/depends/common/xmil/CMakeLists.txt
+++ b/depends/common/xmil/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 project(xmil)
 
+set(CMAKE_VERBOSE_MAKEFILE ON)
+
 list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR})
 
 include(ExternalProject)
