Updated by kodi-game-scripting
https://github.com/kodi-game/kodi-game-scripting/

--- a/game.libretro.xmil/addon.xml.in
+++ b/game.libretro.xmil/addon.xml.in
@@ -22,7 +22,7 @@
 			<icon>resources/icon.png</icon>
 			<screenshot>resources/screenshot-01.jpg</screenshot>
 		</assets>
-		<summary lang="en_GB">Sharp X1 (X Millennium) 0.60</summary>
+		<summary lang="en_GB">Sharp X1 (X Millennium)</summary>
 		<description lang="da_DK">X millennium blev født i slutningen af 1990&apos;erne som X1R, en fork af X1EMU i real-tid.</description>
 		<description lang="de_DE">X Millennium wurde in den späten 1990er Jahren als X1R geboren, ein Echtzeitmodus-Ableger von X1EMU.</description>
 		<description lang="en_GB">X millennium was born in the late 1990s as X1R, a real-time mode fork of X1EMU.</description>
